* Working on UI

--- a/androidfilepickercompose/src/main/res/values/strings.xml
+++ b/androidfilepickercompose/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AndroidFilePickerCompose</string>
+    <string name="afp_app_name">AndroidFilePickerCompose</string>
+    <string name="afp_back">Back</string>
 </resources>
