--- a/androidfilepickercompose/src/main/res/values/strings.xml
+++ b/androidfilepickercompose/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="afp_app_name">AndroidFilePickerCompose</string>
     <string name="afp_back">Back</string>
+    <string name="create_directory">Create directory</string>
+    <string name="afp_select">Select</string>
 </resources>
