--- a/androidfilepickercompose/src/main/res/values/strings.xml
+++ b/androidfilepickercompose/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="directory">Directory</string>
     <string name="file">File</string>
     <string name="storage_internal">Internal Storage</string>
+    <string name="storage_sd_card">SD card</string>
+    <string name="root_directory">Root</string>
 </resources>
