--- a/androidfilepickercompose/src/main/res/values/strings.xml
+++ b/androidfilepickercompose/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="afp_app_name">AndroidFilePickerCompose</string>
     <string name="afp_back">Back</string>
-    <string name="create_directory">Create directory</string>
+    <string name="afp_create_directory">Create directory</string>
     <string name="afp_select">Select</string>
-    <string name="directory">Directory</string>
-    <string name="file">File</string>
-    <string name="storage_internal">Internal Storage</string>
-    <string name="storage_sd_card">SD card</string>
-    <string name="root_directory">Root</string>
+    <string name="afp_directory">Directory</string>
+    <string name="afp_file">File</string>
+    <string name="afp_storage_internal">Internal Storage</string>
+    <string name="afp_storage_sd_card">SD card</string>
+    <string name="afp_root_directory">Root</string>
+    <string name="afp_select_storage">Select storage</string>
 </resources>
